@@ -1,3 +1,5 @@
+* add limited chat flood control (sgb)
+
 * [ 1837246 ] deploy troops phase window behavior (sgb)
 
 * fix bug [ 1855427 ] submerged subs prevent air units from moving (sgb)
